fix: configuracion de test